--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -89,400 +89,56 @@
       "{\"type\":\"get_step\",\"step\":8}\n",
       "{\"type\":\"get_step\",\"step\":9}\n",
       "{\"type\":\"get_step\",\"step\":10}\n",
+      "all tasks are done!\n",
+      "new destination: (3, 13)\n",
       "{\"type\":\"get_step\",\"step\":11}\n",
       "{\"type\":\"get_step\",\"step\":12}\n",
       "{\"type\":\"get_step\",\"step\":13}\n",
       "{\"type\":\"get_step\",\"step\":14}\n",
       "{\"type\":\"get_step\",\"step\":15}\n",
+      "all tasks are done!\n",
+      "new destination: (14, 11)\n",
       "{\"type\":\"get_step\",\"step\":16}\n",
       "{\"type\":\"get_step\",\"step\":17}\n",
       "{\"type\":\"get_step\",\"step\":18}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 1)\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
       "{\"type\":\"get_step\",\"step\":19}\n",
       "{\"type\":\"get_step\",\"step\":20}\n",
       "{\"type\":\"get_step\",\"step\":21}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
       "{\"type\":\"get_step\",\"step\":22}\n",
+      "all tasks are done!\n",
+      "new destination: (12, 11)\n",
       "{\"type\":\"get_step\",\"step\":23}\n",
       "all tasks are done!\n",
-      "new destination: (9, 1)\n",
+      "new destination: (18, 4)\n",
       "{\"type\":\"get_step\",\"step\":24}\n",
       "{\"type\":\"get_step\",\"step\":25}\n",
       "{\"type\":\"get_step\",\"step\":26}\n",
+      "all tasks are done!\n",
+      "new destination: (18, 2)\n",
       "{\"type\":\"get_step\",\"step\":27}\n",
+      "all tasks are done!\n",
+      "new destination: (9, 1)\n",
+      "{\"type\":\"get_step\",\"step\":28}\n",
       "all tasks are done!\n",
       "new destination: (18, 2)\n",
       "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":28}\n",
+      "new destination: (14, 11)\n",
       "{\"type\":\"get_step\",\"step\":29}\n",
+      "all tasks are done!\n",
+      "new destination: (9, 4)\n",
+      "all tasks are done!\n",
+      "new destination: (14, 11)\n",
       "{\"type\":\"get_step\",\"step\":30}\n",
       "{\"type\":\"get_step\",\"step\":31}\n",
       "{\"type\":\"get_step\",\"step\":32}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
       "{\"type\":\"get_step\",\"step\":33}\n",
       "{\"type\":\"get_step\",\"step\":34}\n",
       "{\"type\":\"get_step\",\"step\":35}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
       "{\"type\":\"get_step\",\"step\":36}\n",
       "all tasks are done!\n",
-      "new destination: (18, 2)\n",
+      "new destination: (1, 13)\n",
       "{\"type\":\"get_step\",\"step\":37}\n",
-      "{\"type\":\"get_step\",\"step\":38}\n",
-      "{\"type\":\"get_step\",\"step\":39}\n",
-      "{\"type\":\"get_step\",\"step\":40}\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
-      "{\"type\":\"get_step\",\"step\":41}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 3)\n",
-      "{\"type\":\"get_step\",\"step\":42}\n",
-      "{\"type\":\"get_step\",\"step\":43}\n",
-      "{\"type\":\"get_step\",\"step\":44}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":45}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":46}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":47}\n",
-      "{\"type\":\"get_step\",\"step\":48}\n",
-      "{\"type\":\"get_step\",\"step\":49}\n",
-      "{\"type\":\"get_step\",\"step\":50}\n",
-      "{\"type\":\"get_step\",\"step\":51}\n",
-      "{\"type\":\"get_step\",\"step\":52}\n",
-      "{\"type\":\"get_step\",\"step\":53}\n",
-      "{\"type\":\"get_step\",\"step\":54}\n",
-      "{\"type\":\"get_step\",\"step\":55}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 4)\n",
-      "{\"type\":\"get_step\",\"step\":56}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":57}\n",
-      "{\"type\":\"get_step\",\"step\":58}\n",
-      "{\"type\":\"get_step\",\"step\":59}\n",
-      "{\"type\":\"get_step\",\"step\":60}\n",
-      "{\"type\":\"get_step\",\"step\":61}\n",
-      "{\"type\":\"get_step\",\"step\":62}\n",
-      "{\"type\":\"get_step\",\"step\":63}\n",
-      "{\"type\":\"get_step\",\"step\":64}\n",
-      "{\"type\":\"get_step\",\"step\":65}\n",
-      "{\"type\":\"get_step\",\"step\":66}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":67}\n",
-      "{\"type\":\"get_step\",\"step\":68}\n",
-      "all tasks are done!\n",
-      "new destination: (3, 13)\n",
-      "{\"type\":\"get_step\",\"step\":69}\n",
-      "{\"type\":\"get_step\",\"step\":70}\n",
-      "{\"type\":\"get_step\",\"step\":71}\n",
-      "{\"type\":\"get_step\",\"step\":72}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "all tasks are done!\n",
-      "new destination: (9, 1)\n",
-      "{\"type\":\"get_step\",\"step\":73}\n",
-      "{\"type\":\"get_step\",\"step\":74}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "all tasks are done!\n",
-      "new destination: (9, 1)\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":75}\n",
-      "{\"type\":\"get_step\",\"step\":76}\n",
-      "{\"type\":\"get_step\",\"step\":77}\n",
-      "{\"type\":\"get_step\",\"step\":78}\n",
-      "{\"type\":\"get_step\",\"step\":79}\n",
-      "{\"type\":\"get_step\",\"step\":80}\n",
-      "{\"type\":\"get_step\",\"step\":81}\n",
-      "{\"type\":\"get_step\",\"step\":82}\n",
-      "{\"type\":\"get_step\",\"step\":83}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 4)\n",
-      "{\"type\":\"get_step\",\"step\":84}\n",
-      "{\"type\":\"get_step\",\"step\":85}\n",
-      "{\"type\":\"get_step\",\"step\":86}\n",
-      "{\"type\":\"get_step\",\"step\":87}\n",
-      "{\"type\":\"get_step\",\"step\":88}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "{\"type\":\"get_step\",\"step\":89}\n",
-      "all tasks are done!\n",
-      "new destination: (3, 13)\n",
-      "{\"type\":\"get_step\",\"step\":90}\n",
-      "{\"type\":\"get_step\",\"step\":91}\n",
-      "{\"type\":\"get_step\",\"step\":92}\n",
-      "{\"type\":\"get_step\",\"step\":93}\n",
-      "{\"type\":\"get_step\",\"step\":94}\n",
-      "{\"type\":\"get_step\",\"step\":95}\n",
-      "{\"type\":\"get_step\",\"step\":96}\n",
-      "{\"type\":\"get_step\",\"step\":97}\n",
-      "{\"type\":\"get_step\",\"step\":98}\n",
-      "{\"type\":\"get_step\",\"step\":99}\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
-      "{\"type\":\"get_step\",\"step\":100}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":101}\n",
-      "{\"type\":\"get_step\",\"step\":102}\n",
-      "{\"type\":\"get_step\",\"step\":103}\n",
-      "{\"type\":\"get_step\",\"step\":104}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "all tasks are done!\n",
-      "new destination: (9, 4)\n",
-      "{\"type\":\"get_step\",\"step\":105}\n",
-      "{\"type\":\"get_step\",\"step\":106}\n",
-      "{\"type\":\"get_step\",\"step\":107}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":108}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":109}\n",
-      "{\"type\":\"get_step\",\"step\":110}\n",
-      "{\"type\":\"get_step\",\"step\":111}\n",
-      "{\"type\":\"get_step\",\"step\":112}\n",
-      "{\"type\":\"get_step\",\"step\":113}\n",
-      "{\"type\":\"get_step\",\"step\":114}\n",
-      "{\"type\":\"get_step\",\"step\":115}\n",
-      "{\"type\":\"get_step\",\"step\":116}\n",
-      "{\"type\":\"get_step\",\"step\":117}\n",
-      "{\"type\":\"get_step\",\"step\":118}\n",
-      "{\"type\":\"get_step\",\"step\":119}\n",
-      "{\"type\":\"get_step\",\"step\":120}\n",
-      "all tasks are done!\n",
-      "new destination: (3, 13)\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":121}\n",
-      "{\"type\":\"get_step\",\"step\":122}\n",
-      "{\"type\":\"get_step\",\"step\":123}\n",
-      "{\"type\":\"get_step\",\"step\":124}\n",
-      "{\"type\":\"get_step\",\"step\":125}\n",
-      "{\"type\":\"get_step\",\"step\":126}\n",
-      "{\"type\":\"get_step\",\"step\":127}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "{\"type\":\"get_step\",\"step\":128}\n",
-      "{\"type\":\"get_step\",\"step\":129}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":130}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":131}\n",
-      "{\"type\":\"get_step\",\"step\":132}\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
-      "{\"type\":\"get_step\",\"step\":133}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":134}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 3)\n",
-      "{\"type\":\"get_step\",\"step\":135}\n",
-      "{\"type\":\"get_step\",\"step\":136}\n",
-      "{\"type\":\"get_step\",\"step\":137}\n",
-      "{\"type\":\"get_step\",\"step\":138}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 3)\n",
-      "{\"type\":\"get_step\",\"step\":139}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 3)\n",
-      "{\"type\":\"get_step\",\"step\":140}\n",
-      "{\"type\":\"get_step\",\"step\":141}\n",
-      "{\"type\":\"get_step\",\"step\":142}\n",
-      "{\"type\":\"get_step\",\"step\":143}\n",
-      "{\"type\":\"get_step\",\"step\":144}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "{\"type\":\"get_step\",\"step\":145}\n",
-      "{\"type\":\"get_step\",\"step\":146}\n",
-      "{\"type\":\"get_step\",\"step\":147}\n",
-      "{\"type\":\"get_step\",\"step\":148}\n",
-      "{\"type\":\"get_step\",\"step\":149}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "{\"type\":\"get_step\",\"step\":150}\n",
-      "{\"type\":\"get_step\",\"step\":151}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":152}\n",
-      "{\"type\":\"get_step\",\"step\":153}\n",
-      "{\"type\":\"get_step\",\"step\":154}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 4)\n",
-      "{\"type\":\"get_step\",\"step\":155}\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
-      "{\"type\":\"get_step\",\"step\":156}\n",
-      "{\"type\":\"get_step\",\"step\":157}\n",
-      "{\"type\":\"get_step\",\"step\":158}\n",
-      "{\"type\":\"get_step\",\"step\":159}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":160}\n",
-      "{\"type\":\"get_step\",\"step\":161}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":162}\n",
-      "{\"type\":\"get_step\",\"step\":163}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 1)\n",
-      "{\"type\":\"get_step\",\"step\":164}\n",
-      "{\"type\":\"get_step\",\"step\":165}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 1)\n",
-      "{\"type\":\"get_step\",\"step\":166}\n",
-      "all tasks are done!\n",
-      "new destination: (4, 3)\n",
-      "{\"type\":\"get_step\",\"step\":167}\n",
-      "{\"type\":\"get_step\",\"step\":168}\n",
-      "{\"type\":\"get_step\",\"step\":169}\n",
-      "{\"type\":\"get_step\",\"step\":170}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":171}\n",
-      "all tasks are done!\n",
-      "new destination: (8, 8)\n",
-      "{\"type\":\"get_step\",\"step\":172}\n",
-      "{\"type\":\"get_step\",\"step\":173}\n",
-      "{\"type\":\"get_step\",\"step\":174}\n",
-      "{\"type\":\"get_step\",\"step\":175}\n",
-      "{\"type\":\"get_step\",\"step\":176}\n",
-      "{\"type\":\"get_step\",\"step\":177}\n",
-      "{\"type\":\"get_step\",\"step\":178}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":179}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":180}\n",
-      "{\"type\":\"get_step\",\"step\":181}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "{\"type\":\"get_step\",\"step\":182}\n",
-      "{\"type\":\"get_step\",\"step\":183}\n",
-      "{\"type\":\"get_step\",\"step\":184}\n",
-      "{\"type\":\"get_step\",\"step\":185}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":186}\n",
-      "{\"type\":\"get_step\",\"step\":187}\n",
-      "{\"type\":\"get_step\",\"step\":188}\n",
-      "{\"type\":\"get_step\",\"step\":189}\n",
-      "{\"type\":\"get_step\",\"step\":190}\n",
-      "{\"type\":\"get_step\",\"step\":191}\n",
-      "{\"type\":\"get_step\",\"step\":192}\n",
-      "{\"type\":\"get_step\",\"step\":193}\n",
-      "{\"type\":\"get_step\",\"step\":194}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "{\"type\":\"get_step\",\"step\":195}\n",
-      "{\"type\":\"get_step\",\"step\":196}\n",
-      "all tasks are done!\n",
-      "new destination: (9, 4)\n",
-      "{\"type\":\"get_step\",\"step\":197}\n",
-      "{\"type\":\"get_step\",\"step\":198}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":199}\n",
-      "{\"type\":\"get_step\",\"step\":200}\n",
-      "{\"type\":\"get_step\",\"step\":201}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "{\"type\":\"get_step\",\"step\":202}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "all tasks are done!\n",
-      "new destination: (3, 13)\n",
-      "{\"type\":\"get_step\",\"step\":203}\n",
-      "{\"type\":\"get_step\",\"step\":204}\n",
-      "{\"type\":\"get_step\",\"step\":205}\n",
-      "{\"type\":\"get_step\",\"step\":206}\n",
-      "{\"type\":\"get_step\",\"step\":207}\n",
-      "{\"type\":\"get_step\",\"step\":208}\n",
-      "{\"type\":\"get_step\",\"step\":209}\n",
-      "{\"type\":\"get_step\",\"step\":210}\n",
-      "{\"type\":\"get_step\",\"step\":211}\n",
-      "{\"type\":\"get_step\",\"step\":212}\n",
-      "{\"type\":\"get_step\",\"step\":213}\n",
-      "{\"type\":\"get_step\",\"step\":214}\n",
-      "{\"type\":\"get_step\",\"step\":215}\n",
-      "all tasks are done!\n",
-      "new destination: (12, 11)\n",
-      "{\"type\":\"get_step\",\"step\":216}\n",
-      "{\"type\":\"get_step\",\"step\":217}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":218}\n",
-      "{\"type\":\"get_step\",\"step\":219}\n",
-      "{\"type\":\"get_step\",\"step\":220}\n",
-      "{\"type\":\"get_step\",\"step\":221}\n",
-      "{\"type\":\"get_step\",\"step\":222}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":223}\n",
-      "{\"type\":\"get_step\",\"step\":224}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "{\"type\":\"get_step\",\"step\":225}\n",
-      "{\"type\":\"get_step\",\"step\":226}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":227}\n",
-      "{\"type\":\"get_step\",\"step\":228}\n",
-      "{\"type\":\"get_step\",\"step\":229}\n",
-      "{\"type\":\"get_step\",\"step\":230}\n",
-      "all tasks are done!\n",
-      "new destination: (14, 11)\n",
-      "all tasks are done!\n",
-      "new destination: (8, 3)\n",
-      "{\"type\":\"get_step\",\"step\":231}\n",
-      "{\"type\":\"get_step\",\"step\":232}\n",
-      "{\"type\":\"get_step\",\"step\":233}\n",
-      "{\"type\":\"get_step\",\"step\":234}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n",
-      "{\"type\":\"get_step\",\"step\":235}\n",
-      "{\"type\":\"get_step\",\"step\":236}\n",
-      "{\"type\":\"get_step\",\"step\":237}\n",
-      "{\"type\":\"get_step\",\"step\":238}\n",
-      "{\"type\":\"get_step\",\"step\":239}\n",
-      "{\"type\":\"get_step\",\"step\":240}\n",
-      "{\"type\":\"get_step\",\"step\":241}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 4)\n",
-      "{\"type\":\"get_step\",\"step\":242}\n",
-      "all tasks are done!\n",
-      "new destination: (3, 13)\n",
-      "{\"type\":\"get_step\",\"step\":243}\n",
-      "{\"type\":\"get_step\",\"step\":244}\n",
-      "{\"type\":\"get_step\",\"step\":245}\n",
-      "{\"type\":\"get_step\",\"step\":246}\n",
-      "{\"type\":\"get_step\",\"step\":247}\n",
-      "{\"type\":\"get_step\",\"step\":248}\n",
-      "{\"type\":\"get_step\",\"step\":249}\n",
-      "all tasks are done!\n",
-      "new destination: (1, 13)\n",
-      "{\"type\":\"get_step\",\"step\":250}\n",
-      "all tasks are done!\n",
-      "new destination: (18, 2)\n"
+      "{\"type\":\"get_step\",\"step\":38}\n"
      ]
     }
    ],
